# webperft

./: 448.js  LICENSE  app.js  index.html  package-lock.json  package.json  perft_worker.js  tsconfig.json  webpack.config.js
src/: app.ts  dom_board.ts  index.html  perft.ts  perft_worker.ts  styles.css
src/webperft/: Cargo.toml
src/webperft/src/: lib.rs
